--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="eng">
+<html lang="eng">
 
 <head>
   <meta charset="utf-8">
@@ -14,11 +14,11 @@
 <p>Email:h.heygs@gmail.com</p>
 
 <h2>Skills</h2>
-<li>
-    <ul>Excel</ul>
-    <ul>Powerpoint</ul>
-    <ul>SQL Server</ul>
-</li>
+<ul>
+    <li>Excel</li>
+    <li>Powerpoint</li>
+    <li>SQL Server</li>
+</ul>
 <h2>Experience</h2>
 <h3>Database Analyst (2018-2019)</h3>
 <p>Worked for ABC consulting as a database analyst on multiple projects</p>
