--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
   <title> prog109 Hiame</title>
-  <link href="hello-world.css" rel="stylesheet">
+  <link href="Style/Style.css" rel="stylesheet">
   <link rel="shortcut icob" href="faveicon.pg" type= "image/png">
   </head>
-  <bodu>
+  <body>
+    <header>
   <h1>Prog 109 Hiame </h1>
- <p>Welcome to my site </p>
+  <p>by some student</p>
+  </header>
+  <main>
+      <h2>Assignemnts</h2>
+      <p>Welcome to my site</p>
+<ul>
+
+<li><a href="in-class-learning-images.html">In class learning images </a> </li>
+<li><a href= "resume.html">Resume</a></li>
+
+</ul>
+</main>
+  
+ </body>
  
  
