--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
@@ -14,7 +13,7 @@
   <body>
     <header>
   <h1>Prog 109 Hiame </h1>
-  <p>by some student</p>
+  <p>Hiame</p>
   </header>
   <main>
       <h2>Assignemnts</h2>
