--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
   <title> prog109 Hiame</title>
   <link href="Style/Style.css" rel="stylesheet">
-  <link rel="shortcut icob" href="faveicon.pg" type= "image/png">
+  <link rel="shortcut icon" href="faveicon.pg" type= "image/png">
   </head>
   <body>
     <header>
   <h1>Prog 109 Hiame </h1>
-  <p>Hiame</p>
+  <p>By Hiame</p>
   </header>
   <main>
       <h2>Assignemnts</h2>
@@ -21,11 +21,23 @@
 <ul>
 
 <li><a href="in-class-learning-images.html">In class learning images </a> </li>
+<li><a href="in-class-part-01.html"></a> in class part 1</li>
 <li><a href= "resume.html">Resume</a></li>
 
 </ul>
+<figure class="left">
+  
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/Desert_Electric.jpg/640px-Desert_Electric.jpg">
+<figcaption>Image: Lighenting </figcaption>
+</figure>
+
+<p>The HTML &lt;figure &gt;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 </main>
+<footer>
+  <p>Copyright &copy; 2019 by Hiame Mohammed</p>
+</footer>
   
  </body>
+ </html>
  
  
