--- a/week04-day01.html
+++ b/week04-day01.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
    <title> Week Four Day one</title>
-   <link rel="stylesheet" href="../style/style.css">
+   <link rel="Stylesheet" href="../Style/Style.css">
   </head>
 <body>
     <h1> Learning HTML and CSS</h1>
