changes made in class

--- a/index.html
+++ b/index.html
@@ -7,24 +7,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
   <title> prog109 Hiame</title>
-  <link href="Style/Style.css" rel="stylesheet">
+  <link href="style/style.css" rel="stylesheet">
   <link rel="shortcut icon" href="faveicon.pg" type= "image/png">
   </head>
   <body>
     <header>
   <h1>Prog 109 Hiame </h1>
-  <p>By Hiame</p>
+  <p class="byline"> By Hiame</p>
   </header>
+  <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
+</nav>
+
+
   <main>
-      <h2>Assignemnts</h2>
-      <p>Welcome to my site</p>
+      <h2>Assignments</h2>
+      <p>Here are my assignments</p>
+      <nav>
 <ul>
 
-<li><a href="in-class-learning-images.html">In class learning images </a> </li>
-<li><a href="in-class-part-01.html"></a> in class part 1</li>
-<li><a href= "resume.html">Resume</a></li>
+<li><a href="assignments/in-class-learning-images.html">In class learning images </a> </li>
+<li><a href="assignments/in-class-part-01.html"> in class part 1</a></li>
+<li><a href= "assignments/resume.html">Resume</a></li>
+<li><a href="assignments/week04-day01.html">Week 04 day 01</a></li>
+<li><a href="assignments/list-buttons.html">List Buttons</a></li>
+<li><a href="theme/index.html">Themed Site</a></li>
 
 </ul>
+</nav>
+
+
+<section id="block01">
+  <h2>Block One</h2>
+  <figure class="left">
+  
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
+    <figcaption>Image:Information  </figcaption>
+    </figure>
+    <p>The HTML &lt;figure &gt;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+</section>
+          
+<section id="block02">
+  <h2>Block Two</h2>
+<figure class="left">
+  
+<img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
+<figcaption>Image:Information  </figcaption>
+</figure>
+<p>The HTML &lt;figure &gt;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+</section>
+
+<section id="block03">
+  <h2>Block Three</h2>
 <figure class="left">
   
 <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
@@ -32,6 +70,24 @@
 </figure>
 
 <p>The HTML &lt;figure &gt;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+</section>
+
+<section id="small-block">
+  <h2>Small Block</h2>
+<figure class="left">
+  
+<img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
+<figcaption>Image:Information  </figcaption>
+</figure>
+<p> A small amount of text.</p>
+</section>
+
+<section class="clear">
+  <h2>More Text</h2>
+  <p>Foo.This is a new paragraph.</p>
+
+</section>
+
 </main>
 <footer>
   <p>Copyright &copy; 2019 by Hiame Mohammed</p>
