--- a/Theme/index.html
+++ b/Theme/index.html
@@ -7,3 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
   <title> prog109 Hiame</title>
+  </head>
+  </html>
+  
