--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 <li><a href="assignments/week04-day01.html">Week 04 day 01</a></li>
 <li><a href="assignments/list-buttons.html">List Buttons</a></li>
 <li><a href="theme/index.html">Themed Site</a></li>
-
+<li><a href="#block01"> Block One</a></li>
+<li><a href="#block02"> Block Two</a></li>
+<li><a href="#block03"> Block Three</a></li>
 </ul>
 </nav>
 
