--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
   <title> prog109 Hiame</title>
   <link href="style/style.css" rel="stylesheet">
-  <link rel="shortcut icon" href="faveicon.pg" type= "image/png">
+  <link rel="shortcut icon" href="favicon.png" type= "image/png">
   </head>
   <body>
     <header>
