--- a/Theme/about.html
+++ b/Theme/about.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Hiame</title>
-</head>
+   </head>
 <body>
-    <h1>About Hiame</h1>
+    <header>
+        <h1>About</h1>
+            <h2>About Prog 109 Hiame</h2>
+            <p>By Hiame </p>
+
+    </header>
+    <main>
+        <h2> Programming 109</h2>
+        <p> This is about the introduction to programming class that i am taking at bellevue college</p>
+    </main>
+ <footer>
+  <p>Copyright &copy; 2019 by Hiame Mohammed</p>
+</footer>
     
 </body>
 </html>
