--- a/Theme/index.html
+++ b/Theme/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -8,5 +9,19 @@
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
   <title> prog109 Hiame</title>
   </head>
+  <body>
+  <main>
+    <nav>
+      <ul>
+          <li><a href= "../theme/about.html">About</a></li>
+      </ul>
+    </nav>
+  </main>
+
+  <footer>
+      <p>Copyright &copy; 2019 by Hiame Mohammed</p>
+  </footer>
+</body>
   </html>
   
+ 
