--- a/Theme/about.html
+++ b/Theme/about.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Hiame</title>
+    <title>About Vacations</title>
    </head>
 <body>
     <header>
         <h1>About</h1>
-            <h2>About Prog 109 Hiame</h2>
-            <p>By Hiame </p>
+            <h2><em>Dream Vacation Destantions around the World </em></h2>
+            <p>by Hiame </p>
 
     </header>
     <main>
-        <h2> Programming 109</h2>
-        <p> This is about the introduction to programming class that i am taking at bellevue college</p>
+        <h2> Vacation Destinations</h2>
+        <p> This website is about dream vactions destnations that i am palning to take around the world.</p>
     </main>
  <footer>
   <p>Copyright &copy; 2019 by Hiame Mohammed</p>
