--- a/Theme/index.html
+++ b/Theme/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
-  <title> prog109 Hiame</title>
+  <title> Vacations</title>
+  <link rel="shortcut icon" href="../theme/favicont.png" type="image/png">
   </head>
   <body>
   <main>
@@ -20,6 +21,7 @@
 
   <footer>
       <p>Copyright &copy; 2019 by Hiame Mohammed</p>
+
   </footer>
 </body>
   </html>
