--- a/Theme/about.html
+++ b/Theme/about.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Vacations</title>
+    <title>Around the Globe</title>
    </head>
 <body>
-    <header>
-        <h1>About</h1>
-            <h2><em>Dream Vacation Destantions around the World </em></h2>
-            <p>by Hiame </p>
+        <header>
+        <h1>Places to visit around the world </h1>
+                    <p>By:Hiame </p>
 
     </header>
     <main>
-        <h2> Vacation Destinations</h2>
-        <p> This website is about dream vactions destnations that i am palning to take around the world.</p>
-    </main>
+        <h2><em>Destinations Around the World </em> </h2>
+        <p>As a kid i have always imaged my self  going from places to places and traveling the world.In      an attempt to make that dream come true , i have recently started to travel the world          .I made a promise to myself that i will try to go to a new country every year . This website will be dedicated to sharing my dream destinations that i would like to visit around the world.</p>
+        <p>Thank you for joing me on my journey!</p>
+        </main>
  <footer>
   <p>Copyright &copy; 2019 by Hiame Mohammed</p>
 </footer>
