--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-    
+        <li><a href="assignments/about.html">About</a></li>
+        
     </ul>
 </nav>
 
@@ -35,7 +35,7 @@
 <li><a href= "assignments/resume.html">Resume</a></li>
 <li><a href="assignments/week04-day01.html">Week 04 day 01</a></li>
 <li><a href="assignments/list-buttons.html">List Buttons</a></li>
-<li><a href="theme/index.html">Themed Site</a></li>
+<li><a href="theme/index.html">theme</a></li>
 <li><a href="#block01"> Block One</a></li>
 <li><a href="#block02"> Block Two</a></li>
 <li><a href="#block03"> Block Three</a></li>
