--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <li><a href="assignments/week04-day01.html">Week 04 day 01</a></li>
 <li><a href="assignments/list-buttons.html">List Buttons</a></li>
 <li><a href="theme/index.html">theme</a></li>
+<li><a href="../hiamea.github.io/javascript-tests/looping-over-complex-type.html">looping-over-complex-types</a>
 <li><a href="#block01"> Block One</a></li>
 <li><a href="#block02"> Block Two</a></li>
 <li><a href="#block03"> Block Three</a></li>
