--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
       <nav>
 <ul>
 
-<li><a href="assignments/in-class-learning-images.html">In class learning images </a> </li>
+<li><a href="assignments/In-class-learning-images.html">In class learning images </a> </li>
 <li><a href="assignments/in-class-part-01.html"> in class part 1</a></li>
 <li><a href= "assignments/resume.html">Resume</a></li>
 <li><a href="assignments/week04-day01.html">Week 04 day 01</a></li>
 <li><a href="assignments/list-buttons.html">List Buttons</a></li>
 <li><a href="theme/index.html">theme</a></li>
-<li><a href="javascript-tests/looping-over-complex-type.html"">looping-over-complex-types</a>
+<li><a href="javascript-tests/looping-over-complex-type.html">looping-over-complex-types</a>
+<li><a href="for-loops/index.html">For Loops</a></li>
 <li><a href="#block01"> Block One</a></li>
 <li><a href="#block02"> Block Two</a></li>
 <li><a href="#block03"> Block Three</a></li>
