--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <li><a href="assignments/In-class-learning-images.html">In class learning images </a> </li>
 <li><a href="assignments/in-class-part-01.html"> in class part 1</a></li>
 <li><a href= "assignments/resume.html">Resume</a></li>
+<li><a href ="assignments/download-image.html">Download image</a></li>
 <li><a href="assignments/week04-day01.html">Week 04 day 01</a></li>
 <li><a href="assignments/list-buttons.html">List Buttons</a></li>
 <li><a href="theme/index.html">theme</a></li>
