--- a/assignments/download-image.html
+++ b/assignments/download-image.html
@@ -14,7 +14,12 @@
       </header>
 
     <main>
+        <p>A beautiful sunset  over the mountains in utah.</p>
             <img src="../images/utah-440520_640.jpg" alt="mountain sunset">
+
+        <p>A map of the world.</p>
+
+            <img src="../images/map-of-the-world-2401458_640.jpg" alt="world">
             
     </main>
 
