--- a/for-loops/index.html
+++ b/for-loops/index.html
@@ -12,7 +12,7 @@
     
 
     <header>
-        <h1>Learn for -loops</h1>
+        <h1>Learn for -loops by Hiame</h1>
     </header>
     <main>
         <ul id="myList">
