--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <li><a href="javascript-tests/looping-over-complex-type.html">looping-over-complex-types</a>
 <li><a href="for-loops/index.html">For Loops</a></li>
 <li><a href="javascript-tests/branching.html">branching</a></li>
+<li><a href="javascript-tests/object-choices.html">object-choices</a></li>
 <li><a href="#block01"> Block One</a></li>
 <li><a href="#block02"> Block Two</a></li>
 <li><a href="#block03"> Block Three</a></li>
