--- a/javascript-tests/object-choices.html
+++ b/javascript-tests/object-choices.html
@@ -7,8 +7,13 @@
     <title>Object Choices</title>
     <link rel="stylesheet" href="../style.css">
     <script src="./object-choices.js"></script>
+    <link rel="shortcut icon" href="../favicon.png" type="image/png">
 </head>
 <body>
     <h1>Object Choices</h1>
+
+    <p id="simpleObjectDisplay"></p>
+
+    <button id="simpleObjectAction"> Simple Object</button>
 </body>
 </html>
