--- a/javascript-tests/javascript-arrays.html
+++ b/javascript-tests/javascript-arrays.html
@@ -22,7 +22,7 @@
      <button id="numbers-action">Show Numbers</button>
     </main>
 <footer>
-
+<p>Copyright &copy; 2019 by Hiame Mohamed</p>
 </footer>
 
 
