--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <li><a href="for-loops/index.html">For Loops</a></li>
 <li><a href="javascript-tests/branching.html">branching</a></li>
 <li><a href="javascript-tests/object-choices.html">object-choices</a></li>
+<li><a href="javascript-tests/radio-choices.html">radio-choices</a></li>
 <li><a href="#block01"> Block One</a></li>
 <li><a href="#block02"> Block Two</a></li>
 <li><a href="#block03"> Block Three</a></li>
