--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 <li><a href="javascript-tests/branching.html">branching</a></li>
 <li><a href="javascript-tests/object-choices.html">object-choices</a></li>
 <li><a href="javascript-tests/radio-choices.html">radio-choices</a></li>
+<li><a href="javascript-tests/javascript-arrays.html">Arrays</a></li>
+<li><a href="javascript-tests/primitives.html">primitives</a></li>
+<li><a href="javascript-tests/javascript-objects-work.html">Object-Work</a></li>
 <li><a href="#block01"> Block One</a></li>
 <li><a href="#block02"> Block Two</a></li>
 <li><a href="#block03"> Block Three</a></li>
