--- a/javascript-tests/function-basics.html
+++ b/javascript-tests/function-basics.html
@@ -15,5 +15,11 @@
         
 
     <button id="functionCallsAction">Call Functions</button>
+
+
+    <label for="nameDisplay">Enter a name</label>
+<input type="text" id="nameDisplay" name="nameDisplay">
+
+
 </body>
 </html>
