--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 <li><a href="javascript-tests/javascript-arrays.html">Arrays</a></li>
 <li><a href="javascript-tests/primitives.html">primitives</a></li>
 <li><a href="javascript-tests/javascript-objects-work.html">Object-Work</a></li>
-<li><a href="javascript-tests/function-basics.html">function function-basics</a></li>
+<li><a href="javascript-tests/function-basics.html">function-basics</a></li>
+<li><a href="javascript-tests/function-input.html">function-input</a></li>
 <li><a href="#block01"> Block One</a></li>
 <li><a href="#block02"> Block Two</a></li>
 <li><a href="#block03"> Block Three</a></li>
