--- a/theme/africa/kenya.html
+++ b/theme/africa/kenya.html
@@ -25,13 +25,13 @@
 
 <footer>
     <p>Copyright &copy; 2019 by Hiame Mohammed</p>
+    <ul>
+            <li><a href="../index.html"> Home </a></li>
+        </ul>
 </footer>
     
 </body>
 </html>
-
-
-
 
 
 
