--- a/theme/africa/kenya.html
+++ b/theme/africa/kenya.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kenya</title>
-    <link rel="shortcut icon" href="../theme/favicont.png" type="image/png">
+    <link rel ="shortcut icon " href="../favicont.png" type ="image/png">
   </head>
 
 <body>
