--- a/theme/africa/morocco.html
+++ b/theme/africa/morocco.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Morocco</title>
-    <link rel="shortcut icon" href="../theme/favicont.png" type="image/png">
+    <link rel ="shortcut icon " href="../favicont.png" type ="image/png">
 </head>
 
 <body>
@@ -25,6 +25,9 @@
 
 <footer>
     <p>Copyright &copy; 2019 by Hiame Mohammed</p>
+    <ul>
+            <li><a href="../index.html"> Home </a></li>
+        </ul>
 </footer>
     
 </body>
