--- a/theme/africa/tanzania.html
+++ b/theme/africa/tanzania.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tanzania</title>
+    <link rel ="shortcut icon " href="../favicont.png" type ="image/png">
+   
 </head>
 <body>
     <header>
@@ -18,7 +20,9 @@
 </main>
 <footer>
         <p>Copyright &copy; 2019 by Hiame Mohammed</p>
-  
+        <ul>
+                <li><a href="../index.html"> Home </a></li>
+            </ul>
     </footer>
 </body>
 </html>
