--- a/theme/asia/japan.html
+++ b/theme/asia/japan.html
@@ -17,7 +17,9 @@
     </main>
     <footer>
             <p>Copyright &copy; 2019 by Hiame Mohammed</p>
-      
+            <ul>
+                    <li><a href="../index.html"> Home </a></li>
+                </ul>
         </footer>
 </body>
 </html>
