--- a/theme/asia/thailand.html
+++ b/theme/asia/thailand.html
@@ -20,7 +20,9 @@
 
 <footer>
         <p>Copyright &copy; 2019 by Hiame Mohammed</p>
-  
+        <ul>
+                <li><a href="../index.html"> Home </a></li>
+            </ul>
     </footer>
 </body>
 </html>
