--- a/theme/asia/thailand.html
+++ b/theme/asia/thailand.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Thailand</h1>
+        <link rel ="shortcut icon " href="../favicont.png" type ="image/png">
     </header>
     <main>
     <p>Thailand is a country found in Southeast Asian. It is a country that is known for its tropical beaches, royal palaces, and ornate temples with figures of Buddha. 
