--- a/assignments/list-buttons.html
+++ b/assignments/list-buttons.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>List Buttons Hiame</title>
     <link rel="stylesheet" href="../style/style.css" >
-    <link rel="shortcut icon" href="favicon.png" type= "image/png">
+    <link rel="shortcut icon" href="../favicon.png" type="image/png">
 </head>
 <body>
     <header>
