--- a/javascript-tests/function-input.html
+++ b/javascript-tests/function-input.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Function Inputs</title>
     <link rel="stylesheet" href="function-input.css">
+    <link rel="shortcut icon" href="../favicon.png" type="image/png">
     <script src='function-input.js'></script>
 </head>
 
