--- a/javascript-tests/javascript-arrays.html
+++ b/javascript-tests/javascript-arrays.html
@@ -7,6 +7,7 @@
     <title>JavaScript Arrays Hiame</title>
     <link rel="stylesheet" href="../style/style.css">
     <script src="./javascript-arrays.js"></script>
+    <link rel="shortcut icon" href="../favicon.png" type="image/png">
 </head>
 <body>
     <header>
