--- a/assignments/In-class-learning-images.html
+++ b/assignments/In-class-learning-images.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
   <title>In class Learn Images </title>
-  <link rel="shortcut icon" href="favicon.png" type="image/png">
-  </head>
+  <link rel="shortcut icon" href="../favicon.png" type="image/png">
+    </head>
 
 
 
