--- a/assignments/in-class-part-01.html
+++ b/assignments/in-class-part-01.html
@@ -7,6 +7,7 @@
    <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
    <title>In class Excercise</title>
   <link href="style/style.css"rel="stylesheet">
+  <link rel="shortcut icon" href="../favicon.png" type="image/png">
 </head>
 <body>
     <h1> In class  Part One Hiame </h1>
