--- a/assignments/week04-day01.html
+++ b/assignments/week04-day01.html
@@ -8,6 +8,7 @@
    <meta http-equiv="X-UA-Compatiblw" content="ie=edge">
    <title> Week Four Day one</title>
    <link rel="Stylesheet" href="../style/style.css">
+   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   </head>
 <body>
     <h1> Learning HTML and CSS</h1>
