--- a/javascript-tests/radio-choices.html
+++ b/javascript-tests/radio-choices.html
@@ -8,6 +8,7 @@
     <title>Radio Choices Hiame</title>
     <link rel="stylesheet" href="../style.css">
     <script src="./radio-choices.js"></script>
+    <link rel="shortcut icon" href="../favicon.png" type="image/png">
 
 </head>
 
