--- a/theme/africa/kenya.html
+++ b/theme/africa/kenya.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kenya</title>
     <link rel ="shortcut icon " href="../favicont.png" type ="image/png">
+    <link href="../styles/styles.css" rel ="stylesheet">
+   
   </head>
 
 <body>
