--- a/javascript-tests/branching.html
+++ b/javascript-tests/branching.html
@@ -7,6 +7,7 @@
     <title>Branching</title>
     <script src="./branching.js"></script>
     <link rel= "shortcut icon" href="../favicon.png" type="image/png">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
