--- a/javascript-tests/function-basics.html
+++ b/javascript-tests/function-basics.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Function Basics</title>
     <link rel="shortcut icon" href="../favicon.png" type="image/png">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
