--- a/javascript-tests/primitives.html
+++ b/javascript-tests/primitives.html
@@ -7,6 +7,7 @@
     <title>Primitives in JavaScript</title>
     <script src="./primitives.js"></script>
     <link rel="shortcut icon" href="../favicon.png" type= "image/png">
+    <link rel="stylesheet" href="../style.css">
    
 </head>
 <body>
