--- a/theme/africa/tanzania.html
+++ b/theme/africa/tanzania.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tanzania</title>
     <link rel ="shortcut icon " href="../favicont.png" type ="image/png">
-   
+    <link href="../styles/styles.css" rel ="stylesheet">
 </head>
 <body>
     <header>
