--- a/theme/asia/india.html
+++ b/theme/asia/india.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>India</title>
     <link rel ="shortcut icon " href="../favicont.png" type ="image/png">
+    <link href="../styles/styles.css" rel ="stylesheet">
 </head>
 
 <body>
