--- a/theme/asia/japan.html
+++ b/theme/asia/japan.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Japan</title>
     <link rel ="shortcut icon " href="../favicont.png" type ="image/png">
+    <link href="../styles/styles.css" rel ="stylesheet">
 </head>
 <body>
     <header>
